# rest-client

./: Cargo.toml  LICENSE  README.md  test
src/: cli.rs  curl.rs  lib.rs  main.rs  request.rs
