[package]
name = "rest_cli"
version = "0.1.0"
authors = ["Elliot Bobrow <elliotgreybobrow@gmail.com>"]
edition = "2018"
description = "Send HTTP requests from the command line"
repository = "https://github.com/ebobrow/rest-client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
ansi_term = "0.12"
colored_json = "2"
structopt = "0.3"
